# Traxter-Software

./: .gitignore  Installation.md  README.md  RunningTheRobot.md
rtabmap_ros/: CMakeLists.txt  package.xml
rtabmap_ros/src/: CoreWrapper.cpp  MsgConversion.cpp
traxter_bringup/: CMakeLists.txt  README.md  package.xml
traxter_bringup/config/: d435.json  defaultHardware.yaml  defaultSimulation.yaml
traxter_bringup/launch/: lowLevelAgent.launch.py  navType.launch.xml  realsense.launch.py  recordRosBag.launch.xml  recordRosBag.xml  runType.launch.xml  sensors.launch.xml  slamType.launch.xml  traxter_bringup.launch.py
traxter_cartographer_slam/: CMakeLists.txt  README.md  package.xml
traxter_cartographer_slam/config/: cartographer.lua  realCartographer.lua  simCartographer.lua
traxter_cartographer_slam/launch/: cartographer.launch.py
traxter_description/: CMakeLists.txt  README.md  package.xml
traxter_description/launch/: traxter_description.launch.py
traxter_description/meshes/: realsense.dae
traxter_description/rviz/: default.rviz  visualize.rviz
traxter_description/urdf/: _d435.urdf.xacro  _usb_plug.urdf.xacro  colours.xacro  test_d435_camera.urdf.xacro  traxter.urdf.xacro
traxter_help_rosbag/: CMakeLists.txt  README.md  package.xml
traxter_help_rosbag/src/: helpslamtoolbox.cpp  helpwithimu.cpp  helpwithscan.cpp  helpwithwheelspeed.cpp
traxter_ign_gazebo/: CMakeLists.txt  package.xml
traxter_ign_gazebo/launch/: fullSimul_bridge.launch.py  inLoop_bridge.launch.py  spawn_traxter.launch.py  spawn_world.launch.py
traxter_ign_gazebo/worlds/: cave_circuit_02.sdf  edifice.sdf  industrial_warehouse.sdf  test.sdf  test_v2.sdf  tugbot_warehouse.sdf
traxter_imu_interpreter/: CMakeLists.txt  README.md  package.xml
traxter_imu_interpreter/launch/: imu_interpreter.launch.xml
traxter_imu_interpreter/src/: imu_interpreter.cpp
traxter_kinematics/: CMakeLists.txt  README.md  package.xml
traxter_kinematics/config/: kinematic_config.yaml
traxter_kinematics/launch/: traxter_kinematics.launch.xml
traxter_kinematics/src/: cmdVel_converter.cpp
traxter_msgs/: CMakeLists.txt  README.md  package.xml
traxter_msgs/msg/: DualMotorArray.msg  LightImu.msg
traxter_odometry/: CMakeLists.txt  README.md  package.xml
traxter_odometry/launch/: traxter_odometry.launch.xml
traxter_odometry/src/: odometry_publisher.cpp
traxter_ps3_controller/: CMakeLists.txt  README.md  package.xml
traxter_ps3_controller/config/: joy-params.yaml  teleop-params.yaml
traxter_ps3_controller/launch/: ps3_controller.launch.py
traxter_ps3_controller/src/: controller_feedback.cpp
traxter_qualysis/: CMakeLists.txt  package.xml
traxter_qualysis/src/: qualisys6dof.cpp
traxter_robot_localization/: CMakeLists.txt  README.md  package.xml
traxter_robot_localization/config/: hardwareEKF.yaml  simulationEKF.yaml
traxter_robot_localization/launch/: traxter_robot_localization.launch.xml
traxter_rtabmap/: CMakeLists.txt  README.md  package.xml
traxter_rtabmap/config/: realRtabmap.yaml  simRtabmap.yaml
traxter_rtabmap/launch/: traxter_rtabmap.launch.xml
traxter_scripts/: README.md
traxter_scripts/matlab/: IMU_covariance.mlx
traxter_slam_toolbox/: CMakeLists.txt  README.md  package.xml
traxter_slam_toolbox/config/: mapper_params_online_async.yaml  realAsync.yaml  realTools.yaml  simTools.yaml
traxter_slam_toolbox/launch/: slam_toolbox.launch.py
